main page started

--- a/SDM_webApp/web/WEB-INF/web.xml
+++ b/SDM_webApp/web/WEB-INF/web.xml
@@ -8,9 +8,17 @@
         <servlet-name>LoginServlet</servlet-name>
         <servlet-class>SDM.servlets.LoginServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>StoresAreaAndContentServlet</servlet-name>
+        <servlet-class>SDM.servlets.StoresAreaAndContentServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/pages/signup/login</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>StoresAreaAndContentServlet</servlet-name>
+        <url-pattern>/pages/userdata</url-pattern>
     </servlet-mapping>
 
 
