--- a/SDM_webApp/web/WEB-INF/web.xml
+++ b/SDM_webApp/web/WEB-INF/web.xml
@@ -44,6 +44,11 @@
         <servlet-name>getUserServlet</servlet-name>
         <servlet-class>SDM.servlets.StoresAndContent.getUserServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>LoginErrorServlet</servlet-name>
+        <servlet-class>SDM.servlets.Login.LoginErrorServlet</servlet-class>
+    </servlet>
+
     <servlet-mapping>
         <servlet-name>UsersListServlet</servlet-name>
         <url-pattern>/userData</url-pattern>
@@ -84,4 +89,9 @@
         <servlet-name>getUserServlet</servlet-name>
         <url-pattern>/getCurrentUser</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>LoginErrorServlet</servlet-name>
+        <url-pattern>/loginError</url-pattern>
+    </servlet-mapping>
+
 </web-app>
