html of history page done

--- a/SDM_webApp/web/WEB-INF/web.xml
+++ b/SDM_webApp/web/WEB-INF/web.xml
@@ -60,6 +60,10 @@
         <servlet-name>ItemNamePriceAndId</servlet-name>
         <servlet-class>SDM.servlets.placeOrder.getItemsInfoServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>OrderHistoryServlet</servlet-name>
+        <servlet-class>SDM.servlets.MainPage.OrderHistory.OrderHistoryServlet</servlet-class>
+    </servlet>
 
     <servlet>
         <servlet-name>CreatOrderServlet</servlet-name>
@@ -129,6 +133,10 @@
     <servlet-mapping>
         <servlet-name>AddFeedback</servlet-name>
         <url-pattern>/sendFeedback</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>OrderHistoryServlet</servlet-name>
+        <url-pattern>/getOrderHistory</url-pattern>
     </servlet-mapping>
 
 </web-app>
