--- a/SDM_webApp/web/WEB-INF/web.xml
+++ b/SDM_webApp/web/WEB-INF/web.xml
@@ -76,6 +76,10 @@
         <servlet-name>OwnerFeedbackServlet</servlet-name>
         <servlet-class>SDM.servlets.MainPage.OwnerServlets.OwnerFeedbacks.OwnerFeedbackServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>GetOwnerStoresInZone</servlet-name>
+        <servlet-class>SDM.servlets.MainPage.OwnerServlets.OwnerFeedbacks.GetOwnerStoresInZone</servlet-class>
+    </servlet>
 
     <servlet-mapping>
         <servlet-name>ItemNamePriceAndId</servlet-name>
@@ -148,6 +152,10 @@
     <servlet-mapping>
         <servlet-name>OwnerFeedbackServlet</servlet-name>
         <url-pattern>/getOwnerFeedbacks</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>GetOwnerStoresInZone</servlet-name>
+        <url-pattern>/getStoresFromZone</url-pattern>
     </servlet-mapping>
 
 </web-app>
