--- a/SDM_webApp/web/WEB-INF/web.xml
+++ b/SDM_webApp/web/WEB-INF/web.xml
@@ -80,6 +80,10 @@
         <servlet-name>GetOwnerStoresInZone</servlet-name>
         <servlet-class>SDM.servlets.MainPage.OwnerServlets.OwnerFeedbacks.GetOwnerStoresInZone</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>AddStoreServlet</servlet-name>
+        <servlet-class>SDM.servlets.MainPage.OwnerServlets.AddStore.AddStoreServlet</servlet-class>
+    </servlet>
 
     <servlet-mapping>
         <servlet-name>ItemNamePriceAndId</servlet-name>
@@ -156,6 +160,10 @@
     <servlet-mapping>
         <servlet-name>GetOwnerStoresInZone</servlet-name>
         <url-pattern>/getStoresFromZone</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>AddStoreServlet</servlet-name>
+        <url-pattern>/addStore</url-pattern>
     </servlet-mapping>
 
 </web-app>
